# LinkTimeMock

./: CMakeLists.txt  Dependency.cpp  Dependency.h  ImportantClass.cpp  ImportantClass.h  LICENSE  main.cpp
test/: CMakeLists.txt  fakedDependency.cpp  mock_Dependency.h  test_ImportantClass.cpp
